# dreamword

./: # test_framework_basic.py  __init__.py  app.py  basic_usage.py  config.py  database_framework.py  models.py  pyproject.toml  quick_scan.py  quick_test.py  requirements.txt  scan_and_save.py  setup.py  test_semplice.py
core/: mssql_manager.py  mysql_manager.py  oui_cache_system.py  sqlite_manager.py
database/: __init__.py  mssql_manager.py  sqlite_manager.py
examples/: basic_usage.py
framework/: __init__.py  database_framework.py  exceptions.py
framework/cli/: __init__.py  commands.py
framework/core/: __init__.py  base.py  config.py  exceptions.py  logger.py
framework/database/: __init__.py  manager.py  models.py  mssql_provider.py  sqlite_provider.py
framework/examples/: complete_usage_example.py  database_advanced_example.py
framework/networking/: __init__.py  http_client.py  server.py  websocket_client.py
framework/plugins/: __ini__.py  base.py  manager.py
framework/tests/: conftest.py  test_database.py  test_networking.py  test_pligin.py  test_utils.py
framework/utils/: __init__.py  decorators.py  helpers.py  validators.py
networking/: __init__.py  heartbeat.py  info.py  server.py
scanner/: __init__.py  nmap_scanner.py
utils/: __init__.py  logger.py
